--- a/default.css
+++ b/default.css
@@ -1,147 +1,29 @@
-/*
-	Stylesheet for the ABOVE project documentation.
-	Copyright (c) 2004 FH-Aargau http://www.fh-aargau.ch
-*/
-
 body {
-	background-color: #000;
+	margin: 0;
 	color: #9cf;
-	line-height: 1.2em;
-	font-family: "Arial", "Helvetica", sans-serif;
+	background-color: black;
+    font-family: "Helvetica Neue", "Helvetica", sans-serif;
 }
 
-pre {
-	line-height: 1em;
+a:link, a:visited, a:hover, a:active {
+	color: #9cf;
 }
+a:hover { background-color: #036; }
 
-p, li, dt, dd, th, td {
-	font-size: 9pt;
-}
+p { font-size: 11pt; }
 
-h1, h2, h3, h4 {
-	margin-top: 10px;
+h1, h2 {
+	font-size: 14pt;
+	font-weight: normal;
+	margin-top: 24px;
 	margin-bottom: 2px;
 }
-dt {
-	margin-top: 8px;
-	margin-bottom: 0;
-}
 
-h1 { font-size: 11pt; }
-h2 { font-size: 10pt; }
-h3, h4 {
-	font-size: 9pt;
-	font-weight: normal;
-}
+ul { margin-top: 0; }
 
-p, ul, ol, li, dl, dd, table, th, td {
-	margin-top: 1;
-	margin-bottom: 5px;
-}
-
-li {
-	margin-bottom: 0;
-}
-
-.footer, .rcsid, .caption {
-	font-size: 8pt;
-	margin-bottom: 0;
-	line-height: 1em;
-}
-.footer {
-	margin-top: 10px;
-	padding-top: 3px;
-}
-.rcsid {
-	margin-top: 1px;
-}
-
-.caption {
-	margin-top: 0;
-}
-
-h1, h2, h3 {
-	color: #fff;
-}
-
-div.menu {
-	position: absolute;
-	left: 20px;
-	width: 130px;
-	background-color: #000;
-	font-weight: bold;
-	font-size: 8pt;
-	line-height: 1em;
-}
-
-div.main, div.title {
-	margin-left: 180px;
-	margin-right: 40px;
-}
-
-@media screen {
-	div.menu h2, h1 {
-		background: url(web-menu-h2-bg.jpg);
-	}
-	h1 {
-		padding: 4px;
-	}
-	div.menu ul {
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
-	}
-	div.menu ul li {
-		font-size: 8pt;
-		border-bottom: thin solid #036;
-		padding-left: 4px;
-		padding-bottom: 2px;
-	}
-
-	p.footer {
-		border-top: thin solid #036;
-	}
-
-	a:link {	color: #fff; }
-	a:visited {	color: #eee; }
-	a:hover {
-		color: #fff;
-		background-color: #036;
-	}
-
-	/* fancy tables */
-	table {
-		margin-bottom: 10px;
-		padding: 0;
-		border: none;
-	}
-	td {
-		padding: 2px;
-		margin: 0;
-		border-bottom: thin solid #036;
-	}
-	th {
-		background: url(web-menu-h2-bg.jpg);
-		border-bottom: none;
-		padding-top: 2px;
-		padding-bottom: 2px;
-	}
-	th, th a {
-		font-size: 10pt;
-		color: #fff;
-	}
+main {
+	margin-left: 22px;
+	max-width: 680px;
 }
 
 
-@media print {
-	body {
-		background-color: #fff;
-		color: #000;
-	}
-	p, h1, h2, h3, td, dt, dd {
-		color: #000;
-	}
-	div.menu {
-		display: none;
-	}
-}
